package com.AppRecrutement.AppRecrutement.model;

public enum Role {
    CANDIDAT,
    RECRUTEUR,
    ADMIN
}
