package com.AppRecrutement.AppRecrutement.model;

public enum TypeContrat {
    CDI,
    CDD,
    STAGE,
    FREELANCE,
    CIVP
}
